{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "2144fcd3-6fd4-4527-8b61-e47f0dda48de",
            "actions": [
                {
                    "name": "Lift",
                    "type": "Value",
                    "id": "74e2270c-c1f1-40ac-8013-2c95008a2ca1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwipeUp",
                    "type": "PassThrough",
                    "id": "e44d9b8f-f4d8-4ec3-b324-b7b8ee7f4110",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickRoll",
                    "type": "Value",
                    "id": "49dc1e57-3958-4a8b-8eea-c80de830f5c0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "51115846-c545-4052-986c-4716313a260e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "21f181a1-8acb-4531-827b-f6d642971b0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ff23a2c-a6bf-4ec1-8021-62f546439d3c",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4988b5b4-c006-4c7a-8a38-654adccff0ec",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a6f95bb-3ad8-438b-8f9c-554bfe1175f5",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6750386-5715-4f95-9b9c-2be3bb7cd5d9",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a422041e-8fb9-49e2-a704-2ed72fb36b51",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold(duration=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}